--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,11 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  anasvemmully
+github_link: https://github.com/anasvemmully/Daily-Coding-Problem
 # Build settings
 # theme: minima
+sass:
+  sass_dir: _sass
 plugins:
   - jekyll-feed
 
