--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This vibrant repository houses an incredible collection of solutions 
   and enlightening explanations to a plethora of 
   captivating coding challenges. 
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://anasvemmully.github.io/Daily-Coding-Problem/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  anasvemmully
 github_link: https://github.com/anasvemmully/Daily-Coding-Problem
