--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Daily Coding Problem
+title: Code Crunch
 # email: anasvemmully@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This vibrant repository houses an incredible collection of solutions 
